<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicines"
            android:icon="@drawable/ic_pill"
            android:title="@string/medicines" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_device"
            android:title="@string/devices" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_condition"
            android:title="@string/locations" />
        <item
            android:id="@+id/nav_incidents"
            android:icon="@drawable/ic_incident"
            android:title="@string/incidents" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@android:drawable/ic_menu_myplaces"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_users"
                    android:icon="@drawable/ic_users"
                    android:title="@string/users" />
                <item
                    android:id="@+id/nav_audit_log"
                    android:icon="@drawable/ic_logs"
                    android:title="@string/log_audit" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>
