<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_users"
        android:title="@string/users"
        android:icon="@drawable/ic_users"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audit_log"
        android:title="@string/log_audit"
        android:icon="@drawable/ic_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
</menu>
